@@ -3,6 +3,7 @@ Changes for 4.2.5rc1
 New features:
 
 Bug fixes:
+...G...... [ZBX-15962] added mounted filesystems to vfs.fs.discovery of windows agent (asestakovs)
 ..F....... [ZBX-16153] fix 500 Internal Server Error when trying to preview pie/exploded graph without items (rlataria)
 ..F....... [ZBX-16204] fix undefined offset in CControllerWidgetProblemHostsView (rlataria)
 
@@ -462,6 +463,7 @@ Changes for 4.0.11rc1
 New features:
 
 Bug fixes:
+...G...... [ZBX-15962] added mounted filesystems to vfs.fs.discovery of windows agent (asestakovs)
 
 --------------------------------------------------------------------------------
 Changes for 4.0.10
